tests/resources/yaml/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app.kubernetes.io/name: nginx-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pod
  template:
    metadata:
      name: pod
      labels:
        app.kubernetes.io/name: pod
