tests/resources/yaml/pod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: pod
  labels:
    name: mon-application
spec:
  containers: []
