tests/resources/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
spec:
  selector:
    app.kubernetes.io/name: mon-application
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: "80"
