tests/resources/yaml/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful-set
  labels:
    app.kubernetes.io/name: stateful-set
spec:
  selector:
    matchLabels: {}
  template: {}
